<resources>
    <string name="agora_app_id">093639336e8d44f795906dbb4ea59802</string>


    <string name="app_name">觅邮</string>
    <string name="main_right">保存</string>
    <string name="loading_show_empty">暂无数据</string>
    <string name="error_net">网络异常</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

    <string name="main_tab_home">首页</string>
    <string name="main_tab_circle">发现</string>
    <string name="main_tab_mine">我的</string>

    <string name="please_wait">请稍后...</string>

    <string name="expand">展开</string>
    <string name="collapse">收起</string>

    <string name="dialog_cancel">取消</string>
    <string name="dialog_true">确定</string>

    <string name="permissions_apply_fail">申请相关权限失败</string>
    <string name="permissions_apply_success">申请相关权限成功</string>

    <string name="permissions_again_easy_photos">请点击并允许相关权限</string>

    <string name="permissions_die_easy_photos">请点击并在设置中允许相关权限</string>

    <string name="template_easy_photos">模板</string>

    <string name="text_sticker_easy_photos">文字</string>

    <string name="text_sticker_hint_name_easy_photos">自定义</string>

    <string name="text_sticker_date_easy_photos">日期</string>

    <string name="text_sticker_hint_easy_photos">双击编辑</string>

    <string name="done_easy_photos">完成</string>

    <string name="title">家庭教育指导社群</string>
    <string name="title_detail">每天10分钟，牢记小学600个单词，破解最强大脑记忆密码，孩子有成就更爱学</string>
    <string name="circle_title">旧时光帮你记录漫长岁月</string>
    <string name="circle_content">有时候我会想,要是能在你长大了或者想要结婚的时候遇到你就好了.可我却偏偏在十几岁时遇见了你.这么尴尬的年龄或许可能成了你喜欢的人却不可能成为陪你共度一生的人,十几岁的誓言并不是浮夸或怎样我们只是没有办法没有能力去实现,这样的年龄没有过去也没有未来.却让我铭记一辈子</string>

    <string name="user_login_register">登陆/注册</string>
    <string name="mine_message">消息中心</string>
    <string name="mine_orders">我的订单</string>
    <string name="mine_photos">图片管理</string>
    <string name="mine_dress">地址管理</string>
    <string name="mine_clear">清理缓存</string>
    <string name="mine_version">版本更新</string>
    <string name="Version_number_is_wrong">版本号错误</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="mine_about">关于我们</string>
    <string name="mine_setting">设置</string>
    <string name="user_phone_number">手机号</string>
    <string name="nickname_tishi">昵称 </string>
    <string name="edt_nickname">编辑昵称</string>
    <string name="user_set_address">所在地</string>
    <string name="please_select">请选择</string>
    <string name="user_set_brief">个性签名</string>
    <string name="choose_citys">选择地址</string>

    <string name="book_name">李银河，先锋社会学家</string>

    <string name="title_talk">\“别人家的孩子\”\n对孩子是打击还是激励？</string>

    <string name="input_content">请输入内容...</string>

    <string name="read_setting_directory">目录</string>
    <string name="read_setting_night">夜间</string>
    <string name="read_setting_day">日间</string>
    <string name="read_setting_pagemode">翻页</string>
    <string name="read_setting_set">设置</string>
    <string name="read_setting_pre">上一章</string>
    <string name="read_setting_next">下一章</string>

    <string name="setting_system">系统</string>
    <string name="setting_dark">暗</string>
    <string name="setting_bright">亮</string>
    <string name="setting_add">A+</string>
    <string name="setting_subtract">A-</string>
    <string name="setting_default">默认</string>

    <string name="font_default">系统默认</string>
    <string name="font_qihei">羿创旗黑</string>
    <string name="font_xinshou">新宋体</string>
    <string name="font_wawa">娃娃体</string>
    <string name="font_fzxinghei">行黑</string>
    <string name="font_fzkatong">卡通</string>
    <string name="font_bysong">繁宋体</string>

    <string name="page_mode_simulation">仿真</string>
    <string name="page_mode_cover">覆盖</string>
    <string name="page_mode_slide">滑动</string>
    <string name="page_mode_none">无</string>

    <string name="readseting">设置</string>

</resources>
