<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/color_2c2c2c"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_dark"
            android:textAlignment="center"
            android:textColor="@color/color_fff"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/sb_brightness"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:max="100" />

        <TextView
            android:id="@+id/tv_bright"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_bright"
            android:textAlignment="center"
            android:textColor="@color/color_fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_xitong"
            style="@style/setting_dialog_button"
            android:layout_marginLeft="10dp"
            android:text="@string/setting_system"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_subtract"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/setting_subtract"
            android:textColor="@color/read_dialog_button_select"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center"
            android:text="64"
            android:textColor="@color/color_fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_add"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/setting_add"
            android:textColor="@color/read_dialog_button_select"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_size_default"
            style="@style/setting_dialog_button"
            android:layout_marginStart="20dp"
            android:text="@string/setting_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_default"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:text="@string/font_default"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_qihei"
            style="@style/setting_dialog_button"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/font_qihei"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_fzxinghei"
            style="@style/setting_dialog_button"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/font_fzxinghei"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_fzkatong"
            style="@style/setting_dialog_button"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/font_fzkatong"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_bysong"
            style="@style/setting_dialog_button"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/font_bysong"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:orientation="horizontal">

        <com.old.time.readLib.CircleViewImage
            android:id="@+id/iv_bg_default"
            android:layout_width="@dimen/layout_40"
            android:layout_height="@dimen/layout_40"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@color/read_bg_default"
            app:border_color="@color/read_bg_2"
            app:border_width="@dimen/layout_2" />

        <com.old.time.readLib.CircleViewImage
            android:id="@+id/iv_bg_1"
            android:layout_width="@dimen/layout_40"
            android:layout_height="@dimen/layout_40"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@color/read_bg_1"
            app:border_color="@color/read_bg_2"
            app:border_width="@dimen/layout_2" />

        <com.old.time.readLib.CircleViewImage
            android:id="@+id/iv_bg_2"
            android:layout_width="@dimen/layout_40"
            android:layout_height="@dimen/layout_40"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@color/read_bg_2"
            app:border_color="@color/read_bg_2"
            app:border_width="@dimen/layout_2" />

        <com.old.time.readLib.CircleViewImage
            android:id="@+id/iv_bg_3"
            android:layout_width="@dimen/layout_40"
            android:layout_height="@dimen/layout_40"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@color/read_bg_3"
            app:border_color="@color/read_bg_2"
            app:border_width="@dimen/layout_2" />

        <com.old.time.readLib.CircleViewImage
            android:id="@+id/iv_bg_4"
            android:layout_width="@dimen/layout_40"
            android:layout_height="@dimen/layout_40"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@color/read_bg_4"
            app:border_color="@color/read_bg_2"
            app:border_width="@dimen/layout_2" />
    </LinearLayout>
</LinearLayout>