<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_radius0_stroke_line_bgfff"
    android:padding="@dimen/layout_10">

    <ImageView
        android:id="@+id/img_user_header"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/layout_20"
        android:background="@drawable/shape_radius10_bgfff_strok_efefef"
        android:padding="0.5dp"
        android:src="@mipmap/head_circle" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/img_user_header"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/color_2e6cd3"
        android:textSize="@dimen/text_16"
        android:textStyle="bold" />

    <com.old.time.views.ExpandableTextView
        android:id="@+id/expand_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_name"
        android:layout_marginTop="@dimen/layout_15"
        android:layout_toEndOf="@+id/img_user_header"
        android:background="@color/color_fff"
        app:animDuration="200"
        app:collapseExpandGrarity="right"
        app:collapseExpandTextColor="@color/color_005abc"
        app:collapseExpandTextSize="@dimen/text_12"
        app:contentTextColor="@color/color_4a4a4a"
        app:contentTextSize="@dimen/text_14"
        app:maxCollapsedLines="5"
        app:textCollapse="@string/collapse"
        app:textExpand="@string/expand" />

    <TextView
        android:id="@+id/tv_book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expand_text_view"
        android:layout_marginTop="@dimen/layout_20"
        android:layout_toEndOf="@+id/img_user_header"
        android:gravity="right"
        android:text="@string/title"
        android:textColor="@color/color_2e6cd3"
        android:textSize="@dimen/text_14"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_book_name"
        android:layout_marginTop="@dimen/layout_15"
        android:layout_toEndOf="@+id/img_user_header"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/layout_10"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tv_create_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="昨天 23:36"
            android:textColor="@color/color_969696"
            android:textSize="@dimen/text_14" />

        <ImageView
            android:id="@+id/img_btn_more"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="@dimen/layout_5"
            android:src="@mipmap/btn_more" />

    </LinearLayout>
</RelativeLayout>
