<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.old.time.activitys.UserMesgActivity">

    <include layout="@layout/header_main"/>

    <FrameLayout
        android:id="@+id/frame_layout_header"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_80"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/layout_30"
        android:layout_marginTop="@dimen/layout_20">

        <ImageView
            android:id="@+id/img_user_header"
            android:layout_width="@dimen/layout_80"
            android:layout_height="@dimen/layout_80"
            android:layout_gravity="center"
            android:src="@mipmap/head_circle" />

        <ImageView
            android:id="@+id/header_iv"
            android:layout_width="@dimen/layout_80"
            android:layout_height="@dimen/layout_80"
            android:layout_gravity="center"
            android:src="@mipmap/user_icon_camera" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_44"
        android:background="@color/color_fff"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_10"
        android:paddingRight="@dimen/layout_10">

        <TextView
            android:layout_width="@dimen/layout_100"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/user_phone_number"
            android:textColor="@color/color_aaa"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/tv_edt_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/user_phone_number"
            android:textColor="@color/color_000"
            android:textColorHint="@color/color_ccc"
            android:textSize="@dimen/text_15" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_bg" />

    <LinearLayout
        android:id="@+id/linear_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_44"
        android:background="@color/color_fff"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_10"
        android:paddingRight="@dimen/layout_10">

        <TextView
            android:layout_width="@dimen/layout_100"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/nickname_tishi"
            android:textColor="@color/color_aaa"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/tv_edt_nick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@mipmap/public_arrow_right"
            android:gravity="center_vertical"
            android:hint="@string/edt_nickname"
            android:textColor="@color/color_000"
            android:textColorHint="@color/color_ccc"
            android:textSize="@dimen/text_15" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_bg" />

    <LinearLayout
        android:id="@+id/linear_layout_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_44"
        android:background="@color/color_fff"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_10"
        android:paddingRight="@dimen/layout_10">

        <TextView
            android:layout_width="@dimen/layout_100"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/user_set_address"
            android:textColor="@color/color_aaa"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/tv_edt_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@mipmap/public_arrow_right"
            android:gravity="center_vertical"
            android:hint="@string/please_select"
            android:textColor="@color/color_000"
            android:textColorHint="@color/color_ccc"
            android:textSize="@dimen/text_15" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_bg" />

    <LinearLayout
        android:id="@+id/linear_layout_brief"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_20"
        android:background="@color/color_fff"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_10"
        android:paddingRight="@dimen/layout_10">

        <TextView
            android:layout_width="@dimen/layout_100"
            android:layout_height="@dimen/layout_44"
            android:gravity="center_vertical"
            android:text="@string/user_set_brief"
            android:textColor="@color/color_aaa"
            android:textSize="@dimen/text_15" />

        <TextView
            android:id="@+id/tv_edt_brief"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@mipmap/public_arrow_right"
            android:gravity="center_vertical"
            android:hint="@string/user_set_brief"
            android:paddingBottom="@dimen/layout_20"
            android:textColor="@color/color_000"
            android:textColorHint="@color/color_ccc"
            android:textSize="@dimen/text_15" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_bg" />


</LinearLayout>
