<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_fff"
    android:padding="@dimen/layout_10">

    <ImageView
        android:id="@+id/img_user_header"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="@dimen/layout_20"
        android:src="@mipmap/head_circle" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/img_user_header"
        android:text="@string/app_name"
        android:textColor="@color/color_2e6cd3"
        android:textSize="@dimen/text_14" />

    <TextView
        android:id="@+id/tv_content_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="昨天 23:36"
        android:textColor="@color/color_969696"
        android:textSize="@dimen/text_14" />

    <com.old.time.views.ExpandableTextView
        android:id="@+id/expand_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_name"
        android:layout_marginTop="@dimen/layout_7"
        android:layout_toRightOf="@+id/img_user_header"
        android:background="@color/color_fff"
        app:animDuration="200"
        app:collapseExpandGrarity="right"
        app:collapseExpandTextColor="@color/color_005abc"
        app:collapseExpandTextSize="@dimen/text_12"
        app:contentTextColor="@color/color_4a4a4a"
        app:contentTextSize="@dimen/text_14"
        app:maxCollapsedLines="5"
        app:textCollapse="@string/collapse"
        app:textExpand="@string/expand" />

    <com.old.time.views.NineImageView
        android:id="@+id/multiImagView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_7"
        android:layout_below="@+id/expand_text_view"
        android:layout_toRightOf="@+id/img_user_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multiImagView"
        android:layout_toRightOf="@+id/img_user_header"
        android:orientation="horizontal"
        android:paddingRight="@dimen/layout_10"
        android:paddingTop="@dimen/layout_10">

        <TextView
            android:id="@+id/tv_circle_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="北京 海淀"
            android:textColor="@color/color_969696"
            android:textSize="@dimen/text_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="评论"
            android:textColor="@color/color_969696"
            android:textSize="@dimen/text_12" />

    </LinearLayout>


</RelativeLayout>
